# pygist

./: .gitignore  CMakeLists.txt  FindFFTW.cmake  README  mingw_build.bat  mingw_pygist.py  model.py  pygist.py  setup.py  test_pygist.py  unix_build.sh
gist/: Makefile  compute_gist  gist.c
pygist/: __init__.py  _pygist.py  model.py
